ui - Update robot vac animations - Update robot vac maps - Change card-mod horizontal stack flex to grid - Remove weather status from popup title - Fix broadcast card actions - Remove last of decluttering card - Make doorbell camera icons more visible - Simplify bambu camera

--- a/www/floorplan/floorplan.css
+++ b/www/floorplan/floorplan.css
@@ -82,10 +82,53 @@
   100% { transform: rotate(-360deg); }
 }
 
-/* Wobbling */
-@keyframes wobbling {
-  0% { transform: rotate(-80deg); }
-  100% { transform: rotate(40deg); }
+/* Cleaning */
+@keyframes cleaning {
+  0% {
+    transform: rotate(0deg) translate(0px);
+  }
+  5% {
+    transform: rotate(0deg) translate(0px, -3px);
+  }
+  10% {
+    transform: rotate(0deg) translate(0px, 1px);
+  }
+  15% {
+    transform: rotate(0deg) translate(0px);
+  }
+  20% {
+    transform: rotate(30deg) translate(0px);
+  }
+  25% {
+    transform: rotate(30deg) translate(0px, -3px);
+  }
+  30% {
+    transform: rotate(30deg) translate(0px, 1px);
+  }
+  35% {
+    transform: rotate(30deg) translate(0px);
+  }
+  40% {
+    transform: rotate(0deg) translate(0px);
+  }
+  45% {
+    transform: rotate(-30deg) translate(0px);
+  }
+  50% {
+    transform: rotate(-30deg) translate(0px, -3px);
+  }
+  55% {
+    transform: rotate(-30deg) translate(0px, 1px);
+  }
+  60% {
+    transform: rotate(-30deg) translate(0px);
+  }
+  70% {
+    transform: rotate(0deg) translate(0px);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 #background {
@@ -412,7 +455,7 @@ g.floorplan-long-click > :not(text):hover,
 }
 .vacuum-on {
   fill: var(--cyan-color) !important;
-  animation: wobbling 0.7s linear infinite alternate;
+  animation: cleaning 10s linear infinite;
   transform-box: fill-box;
   transform-origin: center;
 }
